{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 55,
  "lineage": "0778a864-23a3-a7df-ff24-a04dfa6071fd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "liz_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986785391377:internet-gateway/igw-0012df233d1d95b4d",
            "id": "igw-0012df233d1d95b4d",
            "owner_id": "986785391377",
            "tags": {
              "Name": "liz_igw"
            },
            "tags_all": {
              "Name": "liz_igw"
            },
            "vpc_id": "vpc-032478c33fe6c98fc"
          },
          "dependencies": [
            "aws_vpc.liz-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Liz-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Liz-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986785391377:route-table/rtb-0056514eb3693ddec",
            "id": "rtb-0056514eb3693ddec",
            "owner_id": "986785391377",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0012df233d1d95b4d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Liz Routing Table"
            },
            "tags_all": {
              "Name": "Liz Routing Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-032478c33fe6c98fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.liz_igw",
            "aws_vpc.liz-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "liz-k8s-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986785391377:subnet/subnet-068d9e921c322e999",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.20.1.0/27",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-068d9e921c322e999",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "986785391377",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "liz-k8s-subnet"
            },
            "tags_all": {
              "Name": "liz-k8s-subnet"
            },
            "vpc_id": "vpc-032478c33fe6c98fc"
          },
          "dependencies": [
            "aws_vpc.liz-dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "liz-dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:986785391377:vpc/vpc-032478c33fe6c98fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-06528c3324d8376d7",
            "default_route_table_id": "rtb-0056514eb3693ddec",
            "default_security_group_id": "sg-08d228edaa90cc0ef",
            "dhcp_options_id": "dopt-0fcf8da729c91a626",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-032478c33fe6c98fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0056514eb3693ddec",
            "owner_id": "986785391377",
            "tags": {
              "Name": "liz-dev-vpc"
            },
            "tags_all": {
              "Name": "liz-dev-vpc"
            }
          }
        }
      ]
    }
  ]
}